# Cairo-RAG

./: README.md  main.py  pyproject.toml
src/: chain.py  chat.py  config.py  ingestion.py  retriever.py
vector_db/: chroma.sqlite3
